@@ -3,7 +3,7 @@
 
 import os, sys
 sys.path.insert(0, os.path.split(__file__)[0]) # Force relative import for Py3k
-from coverage.backward import to_bytes
+from coverage.backward import to_bytes, rpartition
 from backunittest import TestCase
 from coveragetest import CoverageTest
 
@@ -189,5 +189,5 @@ class CoverageTestTest(CoverageTest):
         executable = executable.split(":", 1)[1].strip()
         self.assertEqual(executable, sys.executable)
         environ = [l for l in out if "COV_FOOBAR" in l][0]
-        _, _, environ = environ.rpartition(":")
+        _, _, environ = rpartition(environ, ":")
         self.assertEqual(environ.strip(), "COV_FOOBAR = XYZZY")
